--- a/app/views/abonnement.html
+++ b/app/views/abonnement.html
@@ -1,6 +1,7 @@
 <p>This is the abonnement view.</p>
 
-<p>Votre abonnement actuel : {{ $scope.abonnement }} à {{ $scope.tarif }} / mois<p>
+<p>{{ aboEnCours }}<p>
+<p>{{ aboStop }}<p>
 
 <a ui-sref="desabonnement">Me désabonner</a>
 <a ui-sref="tarif">Modifier mon offre</a>
