--- a/app/views/tarif.html
+++ b/app/views/tarif.html
@@ -18,9 +18,9 @@
 					<ul ng-bind-html="tarif.description | stringToHtml">
 					</ul>
 					<div class="pricing-bottom">
-						<a ng-show="token" ng-click='subscribe(tarif.id)' href="#" class="btn btn-default btn-bordered btn-lg">Sélectionner</a>
+						<a ng-show="user.token" ng-click='subscribe(tarif.id)' href="#" class="btn btn-default btn-bordered btn-lg">Sélectionner</a>
 
-						<a ng-hide="token" href="#" class="btn btn-default btn-bordered btn-lg">S'inscrire</a>
+						<a ng-hide="user.token" href="#" class="btn btn-default btn-bordered btn-lg">S'inscrire</a>
 					</div>
 				</div>
 			</div>
