--- a/app/views/admin-dashboard.html
+++ b/app/views/admin-dashboard.html
@@ -1,3 +1,4 @@
+<div ng-include="'views/admin_navbar.html'"></div>
 <div class="page page-dashboard">
 
   <div class="pageheader">
@@ -106,18 +107,18 @@
 
               <div class="col-xs-4">
                 <br>
-                <p>Normal </p>
+                <p>Minimal </p>
                 <p><strong>{{ total_sub3 }}</strong></p>
               </div
               <!-- col -->
               <div class="col-xs-4">
                 <br>
-                <p>Premium </p>
+                <p>Medium </p>
                 <p><strong>{{ total_sub2 }}</strong></p>
               </div>
               <div class="col-xs-4">
                 <br>
-                <p>Professionel </p>
+                <p>Premium </p>
                 <p><strong>{{ total_sub1 }}</strong></p>
               </div>
           </div>
@@ -156,17 +157,17 @@
           <div class="row text-center">
               <div class="col-xs-4">
                 <br>
-                <p>Normal </p>
+                <p>Minimal </p>
                 <p><strong>{{ sum_sub3 }}</strong></p>
               </div>
               <div class="col-xs-4">
                 <br>
-                <p>Premium </p>
+                <p>Medium </p>
                 <p><strong>{{ sum_sub2 }}</strong></p>
               </div>
               <div class="col-xs-4">
                 <br>
-                <p>Professionel </p>
+                <p>Premium </p>
                 <p><strong>{{ sum_sub1 }}</strong></p>
               </div>
           </div>
@@ -475,15 +476,15 @@
 
   </div>
   <!-- /row -->
-  <div class="row">    
+  <div class="row">
     <div id="embed-api-auth-container"></div>
     <div class="col-md-6">
-      <div id="chart-1-container"></div>   
-      <div id="view-selector-1-container"></div> 
-  
+      <div id="chart-1-container"></div>
+      <div id="view-selector-1-container"></div>
+
   </div>
     <div class="col-md-6">
-      <div id="chart-2-container"></div>      
+      <div id="chart-2-container"></div>
     <div id="view-selector-2-container"></div>
   </div>
   </div>
