--- a/app/views/admin-order.html
+++ b/app/views/admin-order.html
@@ -41,7 +41,7 @@
                   <td>{{ order.vat }} €</td>
                   <td ng-bind="formatDate(order.created_at) | date:'dd/MM/yyyy'"></td>
                   <td ng-bind="formatDate(order.updated_at) | date:'dd/MM/yyyy'"></td>
-                  <td><a href="#/admin/orders/{{ order.id }}/download" class="btn btn-primary">Télécharger</a></td>
+                  <td><a target="_blank" href="{{link}}" class="btn btn-primary">Télécharger</a></td>
                 </tr>
               </tbody>
             </table>
