nouvelle method global isAdmin, redirection, navbar admin

--- a/app/views/admin_navbar.html
+++ b/app/views/admin_navbar.html
@@ -10,7 +10,7 @@
 		<div class="">
 			<ul class="nav navbar-nav">
 				<li class="active">
-					<a href="#">
+					<a href="#/admin">
 						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Dashboard">
 							<span class="glyphicon glyphicon-home"></span>
 						</span>
