--- a/app/views/database.html
+++ b/app/views/database.html
@@ -1,3 +1,3 @@
 <h3>{{dbName}}</h3>
 
-<div ui-grid="gridOptions" ui-grid-edit ui-grid-cellnav class="myGrid"></div>
+<div ui-grid="gridsDatas" ui-grid-edit ui-grid-cellnav class="grid"></div>
