Edit Tarifs, modifs css, navbar

--- a/app/views/admin_navbar.html
+++ b/app/views/admin_navbar.html
@@ -26,6 +26,14 @@
 					</a>
 				</li>
                 <li>
+					<a ui-sref="admin-orders">
+						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Commandes">
+							<span class="fa fa-shopping-cart"></span>
+						</span>
+						<span class="full-nav"> Commandes </span>
+					</a>
+				</li>
+                <li>
 					<a href="#/admin/pages">
 						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Pages">
 							<span class="fa fa-file"></span>
