--- a/app/views/presentation.html
+++ b/app/views/presentation.html
@@ -1,5 +1,4 @@
-<p>This is the presentation view.</p>
 
-<div>
+ <div class="container">
   <p ng-bind-html="pageContent | stringToHtml"></p>
 </div>
