--- a/app/views/tarifs.html
+++ b/app/views/tarifs.html
@@ -1,1 +1,23 @@
-<p>This is the tarifs view.</p>
+<div class="container">
+    <div class="pageheader">
+
+      <h2>Tarifs <span>//Liste</span></h2>
+
+      <div class="page-bar">
+
+        <ul class="page-breadcrumb">
+          <li>
+            <a ui-sref="admin-dashboard"><i class="fa fa-home"></i> {{main.title}}</a>
+          </li>
+          <li>
+            <a ui-sref="admin-dashboard">{{page.title}}</a>
+          </li>
+        </ul>
+
+      </div>
+
+    </div>
+    <div ui-grid="gridOptions">
+
+    </div>
+</div>
