--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -120,6 +120,12 @@ body {
   line-height: 24px;
   padding: 0;
   margin: 0;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+.ng-scope{
+	flex: 1 0 auto;
 }
 p {
   margin: 0 0 20px 0;
@@ -561,6 +567,7 @@ Loginand register form
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 85vh;
 }
 .login-register-wrapper {
   padding: 120px 0 120px 0;
