--- a/app/views/users.html
+++ b/app/views/users.html
@@ -1,3 +1,24 @@
-<div ui-grid="gridOptions">
+<div class="container">
+    <div class="pageheader">
 
+      <h2>Utilisateurs <span>//Liste</span></h2>
+
+      <div class="page-bar">
+
+        <ul class="page-breadcrumb">
+          <li>
+            <a ui-sref="admin-dashboard"><i class="fa fa-home"></i> {{main.title}}</a>
+          </li>
+          <li>
+            <a ui-sref="admin-dashboard">{{page.title}}</a>
+          </li>
+        </ul>
+
+      </div>
+
+    </div>
+
+    <div ui-grid="gridOptions">
+
+    </div>
 </div>
