--- a/app/views/profil.html
+++ b/app/views/profil.html
@@ -12,5 +12,6 @@ Code Postal : {{profil.zipcode}}<br>
 Ville : {{profil.city}}<br>
 Téléphone : {{profil.phone}}<br>
 
-<a ui-sref="profilUpdate">Modifier le profil</a>
+<a ui-sref="abonnement">Gérer mon abonnement</a><br>
+<a ui-sref="profilUpdate">Modifier le profil</a><br>
 <a ui-sref="password">Modifier mot de passe</a>
